# AML-project

./: .gitignore  README.md  cvae_model.py  main.py  pyproject.toml  requirements.txt  run_inference.sh
AML-group10/1e-4_10_hyperparameter_tuning/: 100_lora.pt
AML-group10/1e-4_15_hyperparameter_tuning/: 150_lora.pt  150_lora_config.json
AML-group10/1e-4_20_hyperparameter_tuning/: 200_lora.pt  200_lora_config.json
AML-group10/3e-4hyperparameter_tuning10epochs/: 100_lora_config.json  1_lora_config.json
AML-group10/3e-4hyperparameter_tuning20epochs/: 200_lora.pt
AML-group10/5e-4_10hyperparameter_tuning/: 100_lora_config.json
AML-group10/5e-4_15hyperparameter_tuning/: README.md
AML-group10/5e-4_20hyperparameter_tuning/: 200_lora.pt  README.md
TeddyVDobreva/lora_model/: 4_lora_config.json  README.md
archive/: 1_train_Dreambooth_LoRA (1).ipynb
archive/5e-4_30_hyperparameter_tuning/: 300_lora.pt  300_lora_config.json  README.md
archive/cvae/: README.md  conditional_vae.ipynb
deployment/: demo.py  original_server.py
dog/: metadata.jsonl
evaluation/: evaluation_functions.py
faces/: metadata.jsonl
lora-output/: 10_lora_config.json  4_lora_config.json  README.md
lora_output/: 4_lora.pt  4_lora_config.json  README.md
notebooks/: analysis.ipynb
src/: CLIP_score.py  preprocessing.py  test_CLIP.py
test_results/: 5e-4_20_hyperparameter_tuning_results.json  baseline_results.json
tests/: test_code_CLIP.py  test_code_dataset_filter.py
validation_results/: 1e-4_20_hyperparameter_tuning_results.json  3e-4_20_hyperparameter_tuning_results.json
(+46 files in other folders)
