[project]
name = "aml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "diffusers>=0.37.1",
    "peft>=0.19.1",
    "torch==2.6.0",
    "torchao==0.12.0",
    "transformers>=5.8.1",
]
