[project]
name = "aml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "fastapi>=0.136.3",
    "fastapi-responses>=0.2.1",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
    "torch==2.10.0",
    "torch-fidelity>=0.4.0",
    "torchao==0.16.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.21.0",
    "transformers>=5.8.1",
    "ultralytics>=8.4.53",
    "uvicorn>=0.48.0",
]
